--- a/src/components/TF2/PlayerHistoryCard/PlayerHistoryCard.css
+++ b/src/components/TF2/PlayerHistoryCard/PlayerHistoryCard.css
@@ -19,9 +19,10 @@
 }
 
 .phc-content {
-  top: -7px;
+  display: grid;
+  top: -10px;
+  grid-template-rows: 40px 22px 40px auto;
   position: relative;
-  flex-grow: 1;
 }
 
 .phc-left {
@@ -35,6 +36,9 @@
 
 .phc-name,
 .redirect {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin-right: 6px;
   align-self: unset;
   display: unset;
@@ -42,7 +46,6 @@
   text-decoration: none;
   font-weight: bold;
   font-size: xx-large;
-  position: relative;
 }
 
 .phc-pfp {
@@ -53,8 +56,6 @@
 }
 
 .phc-details {
-  position: relative;
-  margin-top: 13px;
   display: flex;
   align-items: center;
   font-size: 18px;
